Projects page added

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,7 +8,7 @@
 </head>
 <body>
     {{> header}}
-       <p>You are Home now</p>
+       <p>You are on About page</p>
      {{> footer}}
 </body>
 </html>
