--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -8,7 +8,9 @@
 </head>
 <body>
     {{> header}}
-       <p>You are Home now</p>
+   
+    <P>Projects Page</P>
+
      {{> footer}}
 </body>
 </html>
