--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,8 @@
 <header>
    <h1> {{headerTitle}} </h1> 
     <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/home">Home</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href="/projects">Projects</a></li>
     </ul>
 </header>
